Bug 43462 - findAll doesn't work
Summary: findAll doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.5.0
Keywords: regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-02 03:19 UTC by clio
Modified: 2022-04-27 08:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
testcase (9.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-12-02 03:19 UTC, clio
Details
screenshot (6.76 KB, image/png)
2011-12-04 07:44 UTC, clio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description clio 2011-12-02 03:19:38 UTC
Created attachment 54064 [details]
testcase

Compare testcase with 3.4 and 3.5. In 3.5 Results = Sheet.findAll(SearchDescriptor) always returns 1 element in 3.5 (if anything found). Results(0).AbsoluteName is the whole sheet.
Comment 1 Pedro 2011-12-04 03:32:16 UTC
I can confirm that the results are different in 3.4.4 and 3.5.0

Your macro seems to be looking for number 3 in the whole spreadsheet (I can't confirm if your macro is correct because I'm not an expert in Basic Macros). 

While version 3.5.0 reports 1 result, version 3.4.4 reports 6. But there are 7 visible cells containing value 3, so both results are wrong...
Comment 2 clio 2011-12-04 07:43:16 UTC
(In reply to comment #1)

> While version 3.5.0 reports 1 result, version 3.4.4 reports 6. But there are 7
> visible cells containing value 3, so both results are wrong...

No, the result in 3.4.4 is right, because the results with adjacent cells are grouped together into 1 result. See screenshot.
Comment 3 clio 2011-12-04 07:44:05 UTC
Created attachment 54109 [details]
screenshot
Comment 4 clio 2011-12-04 07:56:58 UTC
There is an extension with which you can  navigate through results: http://extensions.libreoffice.org/extension-center/search-in-calc
This extension freezes in LibO 3.5, because it tries to do Results(0).DataArray, but because DataArray is huge (Results(0) is the whole sheet), it freezes the program forever.
Comment 5 Rainer Bielefeld Retired 2011-12-06 22:33:50 UTC
For me already [Reproducible] with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  5d1a991-4cb1bac-ca7e6f5-9125509-ce71330)]" (111109), so not a particular Beta0 problem.

Was ok (result=6) with Server installation of Master "LibO-dev 3.4.5 – WIN7 Home Premium (64bit) English UI 
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]" (in July 2011)

@Noel:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 6 Markus Mohrhard 2012-01-25 05:44:31 UTC
I don't think that this is a problem in basic, instead it is more likely a problem either in calc core or in calc's uno implementation.

Let me see if I can add an api test for the problem and check if there has been an old java based api test which is disabled.
Comment 7 Noel Power 2012-01-25 06:03:04 UTC
markus, push it back to me if not an api/core prob, thanks!!
Comment 8 Markus Mohrhard 2012-01-25 11:55:25 UTC
Can reproduce this problem.

I will add a test to sc/qa/extras in some minutes showing the problem and debug it.
Comment 9 Markus Mohrhard 2012-01-25 12:00:10 UTC
Ahh! This error was dumb. I forgot to adjust this part while switching the ScMarkData behavior. We now pass the ScMarkData as const and the found range is stored in another variable.

Will push the fix to master and ask for review for 3-5 and 3-5-0.
Comment 11 clio 2012-02-06 13:45:35 UTC
OK in LibO 3.5.0rc3
Comment 12 Gowit 2022-04-27 08:27:03 UTC
Light needs vary depending on the tree species, so you’ll want to check your specs. https://tutuappx.com/
https://vidmate.onl/