ScTableSheetObj::findAll does not return the correct range, fdo#43462

Signed-off-by: Kohei Yoshida <kohei.yoshida@suse.com>